--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* universal selector */
 * {
     box-sizing: border-box;
     padding: 0;
@@ -8,7 +9,8 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+/* class selector */ 
+.header { 
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -35,7 +37,7 @@ body {
 .header div ul {
     list-style-type: none;
 }
-
+/* adding display inline-block to make them next to eachother instead of making them on their own */
 .header div ul li {
     display: inline-block;
     margin-left: 25px;
@@ -59,6 +61,7 @@ p {
     background-position: center;
 }
 
+/* elements next to a floating element will flow around it. */
 .float-left {
     float: left;
     margin-right: 25px;
@@ -188,7 +191,7 @@ p {
     font-size: 36px;
 }
 
-.footer {
+.footer {   
     padding: 30px;
     clear: both;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
