--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,7 +26,7 @@ body {
     color: #d9dcd6;
 }
 
-.header div {
+.header nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -34,11 +34,11 @@ body {
     font-size: 20px;
 }
 
-.header div ul {
+.header nav ul {
     list-style-type: none;
 }
 /* adding display inline-block to make them next to eachother instead of making them on their own */
-.header div ul li {
+.header nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
